Hotfix issue #1571.
Signed-off-by: Nikita Lebedev <nikita.lebedev@limechain.tech>